style: copyright in footer added

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         <p>Convert from English to Navi. Na'vi is a constructed language spoken by the Na'vi people in the fictional world Pandora.</p>
                 
         <div class="socials">
-            <a href="https://github.com/codewithmanas"><i class='bx bxl-github'></i>
-            <a href="https://twitter.com/holaaa_manas/"><i class='bx bxl-twitter'></i>
-            <a href="https://www.linkedin.com/in/holaaa-manas/"><i class='bx bxl-linkedin-square'></i>
+            <a href="https://github.com/codewithmanas"><i class='bx bxl-github'></i></a>
+            <a href="https://twitter.com/holaaa_manas/"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.linkedin.com/in/holaaa-manas/"><i class='bx bxl-linkedin-square'></i></a>
         </div>
+
+        <p class="copyright">Copyright © 2022 - Made with 🖤 by <a href="https://github.com/codewithmanas">codewithmanas</a></p>
     </footer>
 
 
