--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="https://www.linkedin.com/in/holaaa-manas/"><i class='bx bxl-linkedin-square'></i></a>
         </div>
 
-        <p class="copyright">Copyright © 2022 - Made with 🖤 by <a href="https://github.com/codewithmanas">codewithmanas</a></p>
+        <small><p class="copyright">Copyright © 2022 - Made with <span class="footer-heart"><i class='bx bxs-heart'></i></span> by <a href="https://github.com/codewithmanas">codewithmanas</a></p></small>
     </footer>
 
 
